# server-fastapi-comm-to-nats-docker

./: .pre-commit-config.yaml  tox.ini
poetry-demo/: Dockerfile  pyproject.toml
poetry-demo/poetry_demo/: fastapi_server.py
